public/css/style.css
/*Import fonts*/
@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Mono&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap');

* {
  margin: 0;
  padding: 0;
}

body,
html {
  height: 100%;
  display: grid;
  background-color: #1e1e2e;
  color: #cdd6f4;
  font-family: 'Noto Sans', sans-serif;
}

#error {
  position: absolute;
  margin-top: -20px;
  left: 50%;
  transform: translatex(-50%);
  color: #f38ba8;
  width: fit-content;
}


/* All of the below code is for the centering box */
.center {
  margin: auto;
  max-width: 600px;
  border-radius: 5px;
  background-color: #292c3c;
  padding: 10px;
}

.center .title {
  font-size: 50pt;
  text-align: center;
}

.center .logo {
  max-width: 300px;
  margin-bottom: 20px;
}

.center .inputs {
  display: flex;
  flex-direction: column;
  padding: 2px;
  font-size: 15pt;
  margin-bottom: 20px;
  width: 250px;
  margin-left: auto;
  margin-right: auto;
}

.center input {
  font-size: 12pt;
  background-color: #45475a;
  border: none;
  padding: 10px;
  border-radius: 5px;
  color: #cdd6f4;
  width: 100%;
}

.center input:before {
  content: ": ";
  position: relative;
  display: block;
  z-index: 5;
}

.center .buttons {
  padding: 2px;
  font-size: 15pt;
  margin-bottom: 20px;
  width: 300px;
  margin-left: auto;
  margin-right: auto;
  display: flex;
  flex-direction: column;
  justify-content: center;
  flex-wrap: nowrap;
  text-align: left;
  text-align: center;
}

.center button {
  text-align: center;
  background-color: #585b70;
  color: #cdd6f4;
  font-size: 13pt;
  border: none;
  border-radius: 5px;
  padding: 10px;
  margin: 5px;
  min-width: 75px;
  width: fit-content;
  transition-property: background-color, color;
  transition-duration: 0.2s;
}

.center .hostbutton {
  background-color: #fab387;
  color: #313244;
}

.center .joinbutton {
  background-color: #a6e3a1;
  color: #313244;
}

.center button:hover,
.center button.chosenClass {
  background-color: #b4befe;
  color: #313244;
}

.center button.greyedout {
  background-color: #666;
  color: #cdd6f4;
}

/* Stuff for in game UI */
.game {
  margin: auto;
  max-width: 600px;
  border-radius: 5px;
  background-color: #292c3c;
  padding: 10px;
  min-width: 300px;
}

#files {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: left;
}

#files ul {
  list-style: none;
  width: 45%;
  margin: 10px;
  margin-top: 30px;
  background-color: #f9e2af;
  color: #181825;
  padding: 5px;
  position: relative;
  border-radius: 0px 5px 5px 5px;
  font-size: 16pt;
}

#tab {
  width: 75px;
  display: block;
  background-color: #fab387;
  height: 20px;
  position: absolute;
  border-radius: 5px 5px 0px 0px;
  float: left;
  top: -20px;
  left: 0;
}

#tab .curve {
  right: -73px;
  border-radius: 0 0 0 10px;
  box-shadow: -10px 0 0 0 #fab387;
  position: relative;
  width: 18px;
  display: block;
  height: 19px;
  top: 1px;
}

/* Mobile CSS */
@media(max-width: 600px) {
  html, body{
    background-color: #292c3c;
  }

  #error {
    left: 0;
    transform: none;
    width: 100%;
    text-align: center;
    font-size: 10pt;
  }

  .center {
    padding: 0;
  }

  .center .title {
    font-size: 37pt;
    top: 0;
    position: absolute;
    width: 100%;
    left: 0;
  }

  .center .stats{
    position: absolute;
    bottom: 0;
    margin-bottom: 10px;
  }

  .game {
    width: 100%;
    padding: 0;
  }

  #files {
    justify-content: center;
    margin: 0;
  }

  #files ul {
    width: 300px;
  }
}

@media(max-height: 540px) {
  .center .title {
    position: relative;
  }
  .center .stats{
    position: relative;
  }
}

/* Animations */
.blink {
  animation: blink-animation 1s steps(2, start) infinite;
}

@keyframes blink-animation {
  to {
    visibility: hidden;
  }
}

